# Mortis

./: LICENSE  pyproject.toml
core/interfaces/: interface.py
core/lines/: lines.py
core/singleton/: db.py  llm.py
docs/: index.md
examples/simple_chat_line/: config.py  main.py  pyproject.toml
