[project]
name = "simple-chat-line"
version = "0.0.1"
description = "a simple usage of Mortis"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "volcengine-python-sdk[ark] (>=1.0.124,<2.0.0)",
    "httpx[socks] (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
